--- a/index.html
+++ b/index.html
@@ -1,9 +1,89 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello</title>
+	<title>The Marriage</title>
+	<link href="main.css" rel="stylesheet" type="text/css">
+	<meta content="width=device-width, initial-scale=1" name="viewport">
+	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
+	<script type="text/javascript">WebFont.load({
+  google: {
+    families: ["Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic","Prata:regular"]
+  }
+});</script>
+<script src="https://daks2k3a4ib2z.cloudfront.net/0globals/modernizr-2.7.1.js" type="text/javascript"></script>
 </head>
 <body>
-	Hello
+	<div class="navbar w-nav" data-animation="over-right" data-collapse="small" data-contain="1" data-duration="400">
+		<div class="w-container">
+			<a class="logo-link-block w-hidden-main w-hidden-medium w-inline-block" href="index.html#">
+				<h1 class="hero-title logo-title">Arindam</h1>
+				<h1 class="and hero-title logo-title">&amp;</h1>
+				<h1 class="hero-title logo-title">Poulami</h1>
+			</a>
+			<nav class="nav-menu w-nav-menu" role="navigation">
+				<a class="nav-link w-nav-link" href="index.html">Home</a>
+				<a class="nav-link w-nav-link" href="the-couple.html">The couple</a>
+				<a class="nav-link w-nav-link" href="gallery.html">Gallery</a>
+				<a class="nav-link w-nav-link" href="blog.html">Blog</a>
+				<a class="nav-link w-nav-link" href="schedule.html">Schedule</a>
+			</nav>
+			<div class="menu-button w-nav-button">
+				<div class="w-icon-nav-menu">
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="hero-section">
+		<div class="hero-overlay-section">
+			<div class="container hero-container w-container">
+				<h1 class="hero-title" data-ix="hero-fade-in">Arindam</h1>
+				<h1 class="and hero-title" data-ix="hero-fade-in-2">&amp;</h1>
+				<h1 class="hero-title" data-ix="hero-fade-in-3">Poulami</h1>
+				<div class="hero-divider-line" data-ix="hero-fade-in-4"></div>
+				<div class="hero-date-wrapper">
+					<h2 class="hero-date-title" data-ix="hero-fade-in-5">21st & 23rd February, 2019</h2>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="image-section section" id="the-couple">
+		<div class="container couple-container w-container">
+			<div class="couple-block">
+				<div class="person-list-wrapper w-dyn-list">
+					<div class="person-list w-dyn-items">
+						<div class="person-item w-dyn-item">
+							<div class="couple-image-block" style="background-image: url('images/arindam.jpg');">
+							
+							</div>
+							<h3 class="couple-title">Arindam</h3>
+							<h3 class="couple-title subtitle">Pal</h3>
+							<p class="couple-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="couple-block divider">
+				<h3 class="and couple-title">&amp;</h3>
+			</div>
+			<div class="_2 couple-block">
+				<div class="person-list-wrapper w-dyn-list">
+					<div class="person-list w-dyn-items">
+						<div class="person-item w-dyn-item">
+							<div class="couple-image-block" style="background-image: url('images/poulami.jpg');">
+							
+							</div>
+							<h3 class="couple-title">Poulami</h3>
+							<h3 class="couple-title subtitle">Pal</h3>
+							<p class="couple-paragraph">Consectetur adipiscing elit. Vestibulum semper, dui a consectetur vestibulum, nisl ante accumsan felis, ac cursus est orci eget purus. Fusce fermentum lorem nec erat ultrices, in maximus metus cursus. Sed vitae ex eleifend, aliquam diam at, tristique turpis. Praesent libero risus.
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
+<script src="https://daks2k3a4ib2z.cloudfront.net/575d00af09a5a7a9116bacfa/js/webflow.0efbd5a4e.js" type="text/javascript"></script>
+
 </body>
 </html>
