changed blog and corrected text in bibaho and boubhat

--- a/schedule/bibaho.html
+++ b/schedule/bibaho.html
@@ -51,12 +51,21 @@
 				</div>
 				<div class="align-left white-content-block-content-wrapper">
 					<div class="rich-text-block w-richtext">
-						<blockquote>
+						<!--blockquote>
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sollicitudin eu diam eu convallis. Sed quis placerat neque.
-						</blockquote>
-						<p>Vestibulum ut placerat nisl. Cras sed purus tellus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Duis posuere nisi sit amet neque finibus vestibulum. Vivamus at leo ut turpis posuere molestie. Nullam at turpis nec metus pharetra bibendum. Vivamus id urna et leo blandit consequat. Curabitur blandit nisl non libero porta, ultrices vulputate sapien fringilla. Nam nec mauris nec risus pretium tristique eget quis magna. Donec facilisis, turpis ac rhoncus viverra, nulla nisl tincidunt odio, et suscipit odio mauris faucibus arcu. Nulla facilisi. Aliquam pellentesque, urna quis auctor pellentesque, tortor tellus aliquam magna, ut congue erat libero et mi.</p>
-						<h4>Ut pellentesque gravida lorem at aliquet.&nbsp;</h4>
-						<p>Nam vehicula, odio in sagittis consectetur, tortor odio blandit tellus, sed hendrerit magna nisi ac sapien. Donec ac fermentum tellus. Cras elit nulla, dapibus eu interdum ornare, tincidunt eget metus. Quisque vitae lacus venenatis, sagittis metus sed, suscipit tortor. Suspendisse eget quam nec sem dapibus facilisis. Vivamus iaculis sodales blandit. Aliquam nec tincidunt orci.</p>
+						</blockquote-->
+						<p>The rituals of wedding in Bengali marriage is vast and enriched with different activities involving auspiciousness, religious sentiments and fun. A typical marriage starts with 'gaaye holud' early in the morning of the day of marriage. It's equivalent to the 'haldi' observed in marriages of other communities.</p>
+
+<p>Holud or turmeric is sent from both groom's and bride's house to each other's place. At the beginning of the ritual, it's applied on the skin. The starting of this practice probably took place due to the fact that turmeric has capabilities of curing skin diseases and also has antioxidant properties. 
+Both bride and groom take baths after turmeric gets dried off. </p>
+
+<p>Then both the bride and groom get ready; and the groom leaves early as he has to come to bride's place. The people who accompanies the groom while he's coming are called borjaatri (bor = groom, jaatri = passengers).</p>
+
+<p>After the groom arrives at the bride's place; the wedding starts. Usually the wedding follows an auspicious timing based on the positions of heavenly bodies in indian astrology. This timing is called logno. In olden days if the wedding gets called off after scheduling, the bride was ridiculed because she missed the auspicious timing. Such girls were called Lagnabhrastaa. Good that we went past those times.</p>
+
+<p>Before the event of marriage starts, the groom and bride are not allowed to see each other. While guests start to come, they greet both the bride and groom separately and hand over gifts and exchange pleasantries. Just like anywhere else in the world, weddings are also a great place to socialise here.</p> 
+
+<p>The actual event of wedding is a religious event which needs a priest, a Brahmin to be there. One Brahmin from each house remains present in the whole exercise to ensure everything is in place.</p>
 					</div>
 					<div class="blog-author-block go-back">
 						<a class="button w-button" href="../schedule.html">Back to Schedule</a>
