--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="image-section section" id="the-couple">
+	<!--div class="image-section section" id="the-couple">
 		<div class="container couple-container w-container">
 			<div class="couple-block">
 				<div class="person-list-wrapper w-dyn-list">
@@ -81,7 +81,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
 <script src="https://daks2k3a4ib2z.cloudfront.net/575d00af09a5a7a9116bacfa/js/webflow.0efbd5a4e.js" type="text/javascript"></script>
 
