--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
 			<a class="logo-link-block w-hidden-main w-hidden-medium w-inline-block" href="blog.html#">
 				<h1 class="hero-title logo-title">Arindam</h1>
 				<h1 class="and hero-title logo-title">&amp;</h1>
-				<h1 class="hero-title logo-title">Liza</h1>
+				<h1 class="hero-title logo-title">Poulami</h1>
 			</a>
 			<nav class="nav-menu w-nav-menu" role="navigation">
 				<a class="nav-link w-nav-link" href="index.html">Home</a>
