--- a/schedule.html
+++ b/schedule.html
@@ -43,6 +43,7 @@
 										<div class="schedule-info-title">BK Park, BK Block, Sector II</div>
 										<div class="schedule-info-title">Salt Lake City, Kolkata</div>
 										<a class="location-view-link" target="_blank" href="https://goo.gl/maps/PN5iznrKoFJ2">View Location on Google</a>
+										<a class="apple-view-link" target="_blank" href="https://pass.is/oBB14g">Add to Apple Wallet</a>
 										<div class="schedule-button-wrapper">
 											<a class="button schedule-more-info w-button" href="schedule/bibaho.html">More info</a>
 										</div>
@@ -57,6 +58,7 @@
 										<div class="schedule-info-title">Fair Land Marriage Hall, Manoshipara, Bediapara</div>
 										<div class="schedule-info-title">North Dumdum, Kolkata</div>
 										<a class="location-view-link" target="_blank" href="https://goo.gl/maps/tuwSdsGc3yL2">View Location on Google</a>
+										<a class="apple-view-link" target="_blank" href="https://pass.is/oBB14g">Add to Apple Wallet</a>
 										<div class="schedule-button-wrapper">
 											<a class="button schedule-more-info w-button" href="schedule/boubhaat.html">More info</a>
 										</div>
