--- a/the-couple.html
+++ b/the-couple.html
@@ -31,7 +31,7 @@
 		<div class="hero-overlay-section small"></div>
 	</div>
 
-	<div class="image-section section" id="the-couple">
+	<!--div class="image-section section" id="the-couple">
 		<div class="container couple-container w-container">
 			<div class="couple-block">
 				<div class="person-list-wrapper w-dyn-list">
@@ -69,7 +69,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div-->
 	<div class="image-section quote-dark">
 		<div class="container w-container">
 			<div class="quote-block right">
