--- a/index.html
+++ b/index.html
@@ -34,8 +34,6 @@
 		</div>
 	</div>
 	<div class="hero-section">
-		<div class="timer" id="timer">
-		</div>
 		<div class="hero-overlay-section">
 			<div class="container hero-container w-container">
 				<h1 class="hero-title" data-ix="hero-fade-in">Arindam</h1>
@@ -84,9 +82,108 @@
 			</div>
 		</div>
 	</div>
+	<div class="footer">
+		<div class="main-example">
+  			<div class="countdown-container" id="main-example">
+  			</div>
+		</div>
+	</div>
+	<!--div class="footer">
+		<div class="container w-container">
+			<div class="footer-text">
+				<ul id="example">
+	 				<li><span class="days">00</span><p class="days_text">Days</p></li>
+	  				<li class="seperator">:</li>
+	  				<li><span class="hours">00</span><p class="hours_text">Hours</p></li>
+	  				<li class="seperator">:</li>
+	 				<li><span class="minutes">00</span><p class="minutes_text">Minutes</p></li>
+	  				<li class="seperator">:</li>
+	  				<li><span class="seconds">00</span><p class="seconds_text">Seconds</p></li>
+				</ul>
+			</div>
+		</div>
+	</div-->
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
 <script src="https://daks2k3a4ib2z.cloudfront.net/575d00af09a5a7a9116bacfa/js/webflow.0efbd5a4e.js" type="text/javascript"></script>
-<script src="scripts/timer.js" type="text/javascript"></script>
-
+  <script src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
+<script src="scripts/jquery.countdown.min.js"></script>
+<script type="text/template" id="main-example-template">
+<div class="time <%= label %>">
+  <span class="count curr top"><%= curr %></span>
+  <span class="count next top"><%= next %></span>
+  <span class="count next bottom"><%= next %></span>
+  <span class="count curr bottom"><%= curr %></span>
+  <span class="label"><%= label.length < 6 ? label : label.substr(0, 3)  %></span>
+</div>
+</script>
+<script type="text/javascript">
+	console.log('test')
+  $(window).on('load', function() {
+    var labels = ['weeks', 'days', 'hours', 'minutes', 'seconds'],
+      nextYear = '2019/02/23',
+      template = _.template($('#main-example-template').html()),
+      currDate = '00:00:00:00:00',
+      nextDate = '00:00:00:00:00',
+      parser = /([0-9]{2})/gi,
+      $example = $('#main-example');
+    // Parse countdown string to an object
+    function strfobj(str) {
+      var parsed = str.match(parser),
+        obj = {};
+      labels.forEach(function(label, i) {
+        obj[label] = parsed[i]
+      });
+      return obj;
+    }
+    // Return the time components that diffs
+    function diff(obj1, obj2) {
+      var diff = [];
+      labels.forEach(function(key) {
+        if (obj1[key] !== obj2[key]) {
+          diff.push(key);
+        }
+      });
+      return diff;
+    }
+    // Build the layout
+    var initData = strfobj(currDate);
+    labels.forEach(function(label, i) {
+      $example.append(template({
+        curr: initData[label],
+        next: initData[label],
+        label: label
+      }));
+    });
+    // Starts the countdown
+    $example.countdown(nextYear, function(event) {
+      var newDate = event.strftime('%w:%d:%H:%M:%S'),
+        data;
+      if (newDate !== nextDate) {
+        currDate = nextDate;
+        nextDate = newDate;
+        // Setup the data
+        data = {
+          'curr': strfobj(currDate),
+          'next': strfobj(nextDate)
+        };
+        // Apply the new values to each node that changed
+        diff(data.curr, data.next).forEach(function(label) {
+          var selector = '.%s'.replace(/%s/, label),
+              $node = $example.find(selector);
+          // Update the node
+          $node.removeClass('flip');
+          $node.find('.curr').text(data.curr[label]);
+          $node.find('.next').text(data.next[label]);
+          // Wait for a repaint to then flip
+          _.delay(function($node) {
+            $node.addClass('flip');
+          }, 50, $node);
+        });
+      }
+    });
+  });
+</script>
 </body>
 </html>
