--- a/schedule/bibaho.html
+++ b/schedule/bibaho.html
@@ -69,6 +69,7 @@ Both bride and groom take baths after turmeric gets dried off. </p>
 					</div>
 					<div class="blog-author-block go-back">
 						<a class="button w-button" href="../schedule.html">Back to Schedule</a>
+						<a class="button w-button" href="../index.html">Back to Home</a>
 					</div>
 				</div>
 			</div>
