--- a/schedule/boubhaat.html
+++ b/schedule/boubhaat.html
@@ -63,6 +63,8 @@
 						<a class="button w-button" href="../schedule.html">
 							Back to Schedule
 						</a>
+						<a class="button w-button" href="../index.html">Back to Home</a>
+
 					</div>
 				</div>
 			</div>
