--- a/blog.html
+++ b/blog.html
@@ -63,14 +63,14 @@
 			</div>
 		</div>
 	</div>
-	<div class="footer">
+	<!--div class="footer">
 		<div class="container w-container">
 			<div class="footer-text">
 			</div>
 			<div class="_2 footer-text">
 			</div>
 		</div>
-	</div>
+	</div-->
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
 	<script src="https://daks2k3a4ib2z.cloudfront.net/575d00af09a5a7a9116bacfa/js/webflow.0efbd5a4e.js" type="text/javascript"></script>
