--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 				<h1 class="hero-title logo-title">Poulami</h1>
 			</a>
 			<nav class="nav-menu w-nav-menu" role="navigation">
-				<a class="nav-link w-nav-link" href="index.html">Home</a>
-				<a class="nav-link w-nav-link" href="the-couple.html">The couple</a>
+				<a class="nav-link w-nav-link" href="index.html">The Couple</a>
 				<a class="nav-link w-nav-link" href="gallery.html">Gallery</a>
 				<a class="nav-link w-nav-link" href="blog.html">Blog</a>
 				<a class="nav-link w-nav-link" href="schedule.html">Schedule</a>
