--- a/gallery.html
+++ b/gallery.html
@@ -1,10 +1,11 @@
+
+
 <!DOCTYPE html>
 <html>
 <head>
 	<title>Gallery</title>
-	<link href="main.css" rel="stylesheet" type="text/css">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
-
+	<link href="main.css" rel="stylesheet" type="text/css">
 
 </head>
 <body>
@@ -16,7 +17,8 @@
 				<h1 class="hero-title logo-title">Poulami</h1>
 			</a>
 			<nav class="nav-menu w-nav-menu" role="navigation">
-				<a class="nav-link w-nav-link" href="index.html">The Couple</a>
+				<a class="nav-link w-nav-link" href="index.html">Home</a>
+				<a class="nav-link w-nav-link" href="the-couple.html">The couple</a>
 				<a class="nav-link w-nav-link" href="gallery.html">Gallery</a>
 				<a class="nav-link w-nav-link" href="blog.html">Blog</a>
 				<a class="nav-link w-nav-link" href="schedule.html">Schedule</a>
@@ -188,3 +190,4 @@
 
 </body>
 </html>
+
