--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
 					<div class="blog-list-wrapper w-dyn-list">
 						<div class="blog-archive-list fullwidth w-clearfix w-dyn-items">
 							<div class="blog-post-item w-dyn-item">
-								<a class="blog-post-image-link-block first fullwidth w-inline-block" href="blog/great-news-weve-selected-the-three-perfect-groomsmen-for-our-day.html" style="background-image: url('https://daks2k3a4ib2z.cloudfront.net/575d09ba4068168e111408a1/575da49d9a7bf26421d64faf_Photo-3.jpg');">
+								<a class="blog-post-image-link-block first fullwidth w-inline-block" href="blog/journey.html" style="background-image: url('images/_DSC6022.JPG');">
 									<div class="blog-posts first-blog-post-overlay">
 										<div class="blog-date first">June 12, 2016</div>
 										<div class="first-blog-post-title full">
