--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,7 @@
 									<div class="blog-posts first-blog-post-overlay">
 										<div class="blog-date first">June 12, 2016</div>
 										<div class="first-blog-post-title full">
-											Great news! We&#39;ve selected the three perfect groomsmen for our day
+											Our Journey
 										</div>
 									</div>
 								</a>
