--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
 					<div class="blog-list-wrapper w-dyn-list">
 						<div class="blog-archive-list fullwidth w-clearfix w-dyn-items">
 							<div class="blog-post-item w-dyn-item">
-								<a class="blog-post-image-link-block first fullwidth w-inline-block" href="blog/journey.html" style="background-image: url('images/_DSC6022.JPG');">
+								<a class="blog-post-image-link-block first fullwidth w-inline-block" href="blog/journey.html" style="background-image: url('images/DSC6022.jpg');">
 									<div class="blog-posts first-blog-post-overlay">
 										<div class="blog-date first">June 12, 2016</div>
 										<div class="first-blog-post-title full">
