--- a/schedule/bibaho.html
+++ b/schedule/bibaho.html
@@ -46,6 +46,8 @@
 						<a class="location-view-link" target="_blank" href="https://goo.gl/maps/PN5iznrKoFJ2">
 							View Location on Google
 						</a>
+						<br/>
+						<a class="apple-view-link" target="_blank" href="https://pass.is/oBB14g">Add to Apple Wallet</a>
 					</div>
 				</div>
 				<div class="align-left white-content-block-content-wrapper">
