--- a/schedule/boubhaat.html
+++ b/schedule/boubhaat.html
@@ -25,14 +25,14 @@
 			</div>
 		</div>
 	</div>
-	<div class="blog-header hero-section" style="background-image: url('images/DSC_0332.jpg');">
+	<div class="blog-header hero-section" style="background-image: url('../images/DSC6022.jpg');">
 		<div class="blog-post hero-overlay-section">
 		</div>
 	</div>
 	<div class="blog-post-section section">
 		<div class="blog-post-container container w-container">
 			<div class="white-content-block" data-ix="fade-in-on-load">
-				<div class="blog-post-image-block" style="background-image: url('images/DSC_0332.jpg');">
+				<div class="blog-post-image-block" style="background-image: url('../images/DSC6022.jpg');">
 					<div class="blog-post-header white-content-block-content-wrapper">
 						<h2 class="blog-post-title">Boubhaat</h2>
 						<div class="schedule-info-title">
@@ -46,6 +46,8 @@
 						</div>
 						<a class="location-view-link" target="_blank" href="https://goo.gl/maps/tuwSdsGc3yL2">View Location on Google
 						</a>
+						<br/>
+						<a class="apple-view-link" target="_blank" href="https://pass.is/oBB14g">Add to Apple Wallet</a>
 					</div>
 				</div>
 				<div class="align-left white-content-block-content-wrapper">
