--- a/blog.html
+++ b/blog.html
@@ -47,7 +47,7 @@
 										</div>
 										<p class="blog-summary-paragraph">Vestibulum ut placerat nisl. Cras sed purus tellus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Duis posuere nisi sit amet neque finibus vestibulum. Vivamus at leo ut turpis posuere molestie. Nullam at turpis nec metus pharetra bibendum. Vivamus id urna et leo blandit consequat. </p>
 									</div>
-									<a href="blog/great-news-weve-selected-the-three-perfect-groomsmen-for-our-day.html">Continue Reading</a>
+									<a href="blog/journey.html">Continue Reading</a>
 								</div>
 							</div>
 						</div>
