--- a/schedule.html
+++ b/schedule.html
@@ -50,7 +50,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="schedule-item w-dyn-item" style="background-image: url('images/DSC6022.jpg');">
+							<div class="schedule-item w-dyn-item" style="background-image: url('images/DSC_0332.jpg');">
 								<div class="schedule-overlay-block">
 									<div class="schedule-overlay white-content-block-content-wrapper">
 										<h2 class="schedule-title">Boubhaat</h2>
