--- a/schedule/boubhaat.html
+++ b/schedule/boubhaat.html
@@ -25,14 +25,14 @@
 			</div>
 		</div>
 	</div>
-	<div class="blog-header hero-section" style="background-image: url('../images/DSC6022.jpg');">
+	<div class="blog-header hero-section" style="background-image: url('../images/DSC_0339.jpg');">
 		<div class="blog-post hero-overlay-section">
 		</div>
 	</div>
 	<div class="blog-post-section section">
 		<div class="blog-post-container container w-container">
 			<div class="white-content-block" data-ix="fade-in-on-load">
-				<div class="blog-post-image-block" style="background-image: url('../images/DSC6022.jpg');">
+				<div class="blog-post-image-block" style="background-image: url('../images/DSC_0339.jpg');">
 					<div class="blog-post-header white-content-block-content-wrapper">
 						<h2 class="blog-post-title">Boubhaat</h2>
 						<div class="schedule-info-title">
