--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<h1 class="hero-title" data-ix="hero-fade-in-3">Poulami</h1>
 				<div class="hero-divider-line" data-ix="hero-fade-in-4"></div>
 				<div class="hero-date-wrapper">
-					<h2 class="hero-date-title" data-ix="hero-fade-in-5"><a href="schedule/bibaho.html">21st</a> & <a href="schedule/boubhaat.html">23rd February, 2019</a></h2>
+					<h2 class="hero-date-title" data-ix="hero-fade-in-5"><a style="color: white;text-decoration: underline;" href="schedule/bibaho.html">21st</a> & <a style="color: white;text-decoration: underline;" href="schedule/boubhaat.html">23rd February, 2019</a></h2>
 				</div>
 			</div>
 		</div>
