--- a/gallery.html
+++ b/gallery.html
@@ -69,7 +69,7 @@
 						</div>
 					</div>
 					<div class="gallery-item w-col w-col-6 w-dyn-item">
-						<a class="gallery-link-block large w-inline-block" data-ix="open-lightbox" href="gallery.html#" style="background-image: url('gallery/_DSC0181.JPG');">
+						<a class="gallery-link-block large w-inline-block" data-ix="open-lightbox" href="gallery.html#" style="background-image: url('gallery/DSC0181.jpg');">
 						</a>
 						<div class="gallery-popup" data-ix="hide-lightbox">
 							<div class="gallery-popup-block">
@@ -83,7 +83,7 @@
 						</div>
 					</div>
 					<div class="gallery-item w-col w-col-6 w-dyn-item">
-						<a class="gallery-link-block large w-inline-block" data-ix="open-lightbox" href="gallery.html#" style="background-image: url('gallery/_DSC0188.JPG');">
+						<a class="gallery-link-block large w-inline-block" data-ix="open-lightbox" href="gallery.html#" style="background-image: url('gallery/DSC0188.jpg');">
 						</a>
 						<div class="gallery-popup" data-ix="hide-lightbox">
 							<div class="gallery-popup-block">
@@ -97,7 +97,7 @@
 						</div>
 					</div>
 					<div class="gallery-item w-col w-col-6 w-dyn-item">
-						<a class="gallery-link-block large w-inline-block" data-ix="open-lightbox" href="gallery.html#" style="background-image: url('gallery/_DSC0202.JPG');">
+						<a class="gallery-link-block large w-inline-block" data-ix="open-lightbox" href="gallery.html#" style="background-image: url('gallery/DSC0202.jpg');">
 						</a>
 						<div class="gallery-popup" data-ix="hide-lightbox">
 							<div class="gallery-popup-block">
@@ -111,7 +111,7 @@
 						</div>
 					</div>
 					<div class="gallery-item w-col w-col-6 w-dyn-item">
-						<a class="gallery-link-block large w-inline-block" data-ix="open-lightbox" href="gallery.html#" style="background-image: url('gallery/_DSC0281.JPG');">
+						<a class="gallery-link-block large w-inline-block" data-ix="open-lightbox" href="gallery.html#" style="background-image: url('gallery/DSC0281.jpg');">
 						</a>
 						<div class="gallery-popup" data-ix="hide-lightbox">
 							<div class="gallery-popup-block">
@@ -125,7 +125,7 @@
 						</div>
 					</div>
 					<div class="gallery-item w-col w-col-6 w-dyn-item">
-						<a class="gallery-link-block large w-inline-block" data-ix="open-lightbox" href="gallery.html#" style="background-image: url('gallery/_DSC0403.JPG');">
+						<a class="gallery-link-block large w-inline-block" data-ix="open-lightbox" href="gallery.html#" style="background-image: url('gallery/DSC0403.jpg');">
 						</a>
 						<div class="gallery-popup" data-ix="hide-lightbox">
 							<div class="gallery-popup-block">
@@ -139,7 +139,7 @@
 						</div>
 					</div>
 					<div class="gallery-item w-col w-col-6 w-dyn-item">
-						<a class="gallery-link-block large w-inline-block" data-ix="open-lightbox" href="gallery.html#" style="background-image: url('gallery/_DSC0470.JPG');">
+						<a class="gallery-link-block large w-inline-block" data-ix="open-lightbox" href="gallery.html#" style="background-image: url('gallery/DSC0470.jpg');">
 						</a>
 						<div class="gallery-popup" data-ix="hide-lightbox">
 							<div class="gallery-popup-block">
