--- a/gallery.html
+++ b/gallery.html
@@ -153,7 +153,7 @@
 						</div>
 					</div>
 					<div class="gallery-item w-col w-col-6 w-dyn-item">
-						<a class="gallery-link-block large w-inline-block" data-ix="open-lightbox" href="gallery.html#" style="background-image: url('gallery/DSC_0667.JPG');">
+						<a class="gallery-link-block large w-inline-block" data-ix="open-lightbox" href="gallery.html#" style="background-image: url('gallery/DSC_0667.jpg');">
 						</a>
 						<div class="gallery-popup" data-ix="hide-lightbox">
 							<div class="gallery-popup-block">
@@ -166,12 +166,25 @@
 							</div>
 						</div>
 					</div>
-					<div class="gallery-item w-col w-col-6 w-dyn-item">
-						<a class="gallery-link-block large w-inline-block" data-ix="open-lightbox" href="gallery.html#" style="background-image: url('gallery/DSC_0400.JPG');">
+					<!--div class="gallery-item w-col w-col-6 w-dyn-item">
+						<a class="gallery-link-block large w-inline-block" data-ix="open-lightbox" href="gallery.html#" style="background-image: url('gallery/DSC_0400.jpg');">
 						</a>
 						<div class="gallery-popup" data-ix="hide-lightbox">
 							<div class="gallery-popup-block">
 								<img class="gallery-popup-image" sizes="100vw" src="gallery/DSC_0400.JPG" srcset="gallery/DSC_0400.JPG 500w, gallery/DSC_0400.JPG 800w, gallery/DSC_0400.JPG 1080w, gallery/DSC_0400.JPG 1600w, gallery/DSC_0400.JPG 2000w, gallery/DSC_0400.JPG 2000w">
+								<a class="close-lightbox w-inline-block" data-ix="close-lightbox" href="gallery.html#">
+									<img class="close-icon" src="http://uploads.webflow.com/575d00af09a5a7a9116bacfa/575d659c9a7bf26421d6216c_Icon-close-thin.png">
+								</a>
+							</div>
+							<div class="close-gallery-block" data-ix="close-lightbox"></div>
+						</div>
+					</div-->
+					<div class="gallery-item w-col w-col-6 w-dyn-item">
+						<a class="gallery-link-block large w-inline-block" data-ix="open-lightbox" href="gallery.html#" style="background-image: url('https://lh3.googleusercontent.com/uf9ET6HkDvmbe5ZGRyJNqq3mpt6xt5oOVABa8wZsIpStFqzFGOlEQwdxcOs61mcgYaDvsABFI-dwS1lzHwh3qZqy5U-46hjmbA4qZIhMluIN08Y5Qsfu1p6QrIcqfkLHL15PGHFKsFQ=w2400');">
+						</a>
+						<div class="gallery-popup" data-ix="hide-lightbox">
+							<div class="gallery-popup-block">
+								<img class="gallery-popup-image" sizes="100vw" src="https://lh3.googleusercontent.com/uf9ET6HkDvmbe5ZGRyJNqq3mpt6xt5oOVABa8wZsIpStFqzFGOlEQwdxcOs61mcgYaDvsABFI-dwS1lzHwh3qZqy5U-46hjmbA4qZIhMluIN08Y5Qsfu1p6QrIcqfkLHL15PGHFKsFQ=w2400" srcset="https://lh3.googleusercontent.com/uf9ET6HkDvmbe5ZGRyJNqq3mpt6xt5oOVABa8wZsIpStFqzFGOlEQwdxcOs61mcgYaDvsABFI-dwS1lzHwh3qZqy5U-46hjmbA4qZIhMluIN08Y5Qsfu1p6QrIcqfkLHL15PGHFKsFQ=w2400 500w, https://lh3.googleusercontent.com/uf9ET6HkDvmbe5ZGRyJNqq3mpt6xt5oOVABa8wZsIpStFqzFGOlEQwdxcOs61mcgYaDvsABFI-dwS1lzHwh3qZqy5U-46hjmbA4qZIhMluIN08Y5Qsfu1p6QrIcqfkLHL15PGHFKsFQ=w2400 800w, https://lh3.googleusercontent.com/uf9ET6HkDvmbe5ZGRyJNqq3mpt6xt5oOVABa8wZsIpStFqzFGOlEQwdxcOs61mcgYaDvsABFI-dwS1lzHwh3qZqy5U-46hjmbA4qZIhMluIN08Y5Qsfu1p6QrIcqfkLHL15PGHFKsFQ=w2400 1080w, https://lh3.googleusercontent.com/uf9ET6HkDvmbe5ZGRyJNqq3mpt6xt5oOVABa8wZsIpStFqzFGOlEQwdxcOs61mcgYaDvsABFI-dwS1lzHwh3qZqy5U-46hjmbA4qZIhMluIN08Y5Qsfu1p6QrIcqfkLHL15PGHFKsFQ=w2400 1600w, https://lh3.googleusercontent.com/uf9ET6HkDvmbe5ZGRyJNqq3mpt6xt5oOVABa8wZsIpStFqzFGOlEQwdxcOs61mcgYaDvsABFI-dwS1lzHwh3qZqy5U-46hjmbA4qZIhMluIN08Y5Qsfu1p6QrIcqfkLHL15PGHFKsFQ=w2400 2000w, https://lh3.googleusercontent.com/uf9ET6HkDvmbe5ZGRyJNqq3mpt6xt5oOVABa8wZsIpStFqzFGOlEQwdxcOs61mcgYaDvsABFI-dwS1lzHwh3qZqy5U-46hjmbA4qZIhMluIN08Y5Qsfu1p6QrIcqfkLHL15PGHFKsFQ=w24002000w">
 								<a class="close-lightbox w-inline-block" data-ix="close-lightbox" href="gallery.html#">
 									<img class="close-icon" src="http://uploads.webflow.com/575d00af09a5a7a9116bacfa/575d659c9a7bf26421d6216c_Icon-close-thin.png">
 								</a>
