--- a/schedule.html
+++ b/schedule.html
@@ -31,14 +31,14 @@
 				<div class="white-content-block" data-ix="hero-fade-in">
 					<div class="white-content-block-content-wrapper" data-ix="hero-fade-in-2">
 						<h2 class="white-block-title">The Schedule</h2>
-						<h3 class="no-bottom-content white-block-subtitle">The main ceremony starts on 16:00, &nbsp;november 5th at the Wedding House.</h3>
+						<h3 class="no-bottom-content white-block-subtitle">The marriage (bibaho) is at Salt Lake, and reception (boubhaat) is near Dumdum Cantonment station. Please join us to celebrate the start of our journey together.</h3>
 					</div>
 					<div class="w-dyn-list" data-ix="hero-fade-in-2">
 						<div class="w-dyn-items">
 							<div class="schedule-item w-dyn-item" style="background-image: url('images/DSC_0339.jpg');">
 								<div class="schedule-overlay-block">
 									<div class="schedule-overlay white-content-block-content-wrapper"><h2 class="schedule-title">Bibaho</h2>
-										<div class="schedule-info-title">16:00 - 17:00</div>
+										<div class="schedule-info-title">4 P.M.</div>
 										<div class="schedule-info-title">BK Park, BK Block, Sector II</div>
 										<div class="schedule-info-title">Salt Lake City, Kolkata</div>
 										<a class="location-view-link" target="_blank" href="https://goo.gl/maps/PN5iznrKoFJ2">View Location on Google</a>
@@ -54,7 +54,7 @@
 								<div class="schedule-overlay-block">
 									<div class="schedule-overlay white-content-block-content-wrapper">
 										<h2 class="schedule-title">Boubhaat</h2>
-										<div class="schedule-info-title">19:00 - 00:00</div>
+										<div class="schedule-info-title">7 P.M.</div>
 										<div class="schedule-info-title">Fair Land Marriage Hall, Manoshipara, Bediapara</div>
 										<div class="schedule-info-title">North Dumdum, Kolkata</div>
 										<a class="location-view-link" target="_blank" href="https://goo.gl/maps/tuwSdsGc3yL2">View Location on Google</a>
