--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="navbar w-nav" data-animation="over-right" data-collapse="small" data-contain="1" data-duration="400">
 		<div class="w-container">
-			<a class="logo-link-block w-hidden-main w-hidden-medium w-inline-block" href="blog.html#">
+			<a class="logo-link-block w-hidden-main w-hidden-medium w-inline-block" href="schedule.html">
 				<h1 class="hero-title logo-title">Arindam</h1>
 				<h1 class="and hero-title logo-title">&amp;</h1>
 				<h1 class="hero-title logo-title">Poulami</h1>
