--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="navbar w-nav" data-animation="over-right" data-collapse="small" data-contain="1" data-duration="400">
 		<div class="w-container">
-			<a class="logo-link-block w-hidden-main w-hidden-medium w-inline-block" href="gallery.html#">
+			<a class="logo-link-block w-hidden-main w-hidden-medium w-inline-block" href="schedule.html">
 				<h1 class="hero-title logo-title">Arindam</h1>
 				<h1 class="and hero-title logo-title">&amp;</h1>
 				<h1 class="hero-title logo-title">Poulami</h1>
@@ -35,7 +35,7 @@
 	<div class="bottom-line section">
 		<div class="container w-container">
 			<div class="section-title-wrapper">
-				<h2 class="section-title">Our Gallery</h2>
+				<h2 class="section-title">Moments</h2>
 				<h3 class="section-title subtitle">Ebhabei golpo hok, aamader rupkothaay.</h3>
 			</div>
 			<script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/dist/pa-embed-player.min.js" async></script>
