--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-wf-domain="template-marriage.webflow.io" data-wf-page="57886d4fe745128157efed71" data-wf-site="575d00af09a5a7a9116bacfa">
 <head>
 	<title>The Marriage</title>
 	<link href="main.css" rel="stylesheet" type="text/css">
@@ -15,11 +15,11 @@
 <body>
 	<div class="navbar w-nav" data-animation="over-right" data-collapse="small" data-contain="1" data-duration="400">
 		<div class="w-container">
-			<a class="logo-link-block w-hidden-main w-hidden-medium w-inline-block" href="index.html#">
+			<!--a class="logo-link-block w-hidden-main w-hidden-medium w-inline-block" href="index.html#">
 				<h1 class="hero-title logo-title">Arindam</h1>
 				<h1 class="and hero-title logo-title">&amp;</h1>
 				<h1 class="hero-title logo-title">Poulami</h1>
-			</a>
+			</a-->
 			<nav class="nav-menu w-nav-menu" role="navigation">
 				<a class="nav-link w-nav-link" href="index.html">The Couple</a>
 				<a class="nav-link w-nav-link" href="gallery.html">Gallery</a>
@@ -105,7 +105,6 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
 <script src="https://daks2k3a4ib2z.cloudfront.net/575d00af09a5a7a9116bacfa/js/webflow.0efbd5a4e.js" type="text/javascript"></script>
-  <script src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
 <script src="scripts/jquery.countdown.min.js"></script>
 <script type="text/template" id="main-example-template">
