--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-wf-domain="template-marriage.webflow.io" data-wf-page="57886d4fe745128157efed71" data-wf-site="575d00af09a5a7a9116bacfa">
 <head>
-	<title>Blog</title>
+	<title>Scribble</title>
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<link href="./main.css" rel="stylesheet" type="text/css">
 
@@ -17,7 +17,7 @@
 			<nav class="nav-menu w-nav-menu" role="navigation">
 				<a class="nav-link w-nav-link" href="index.html">The Couple</a>
 				<a class="nav-link w-nav-link" href="gallery.html">Gallery</a>
-				<a class="nav-link w-nav-link" href="blog.html">Blog</a>
+				<a class="nav-link w-nav-link" href="blog.html">Scribble</a>
 				<a class="nav-link w-nav-link" href="schedule.html">Schedule</a>
 			</nav>
 			<div class="menu-button w-nav-button">
