--- a/blog-archive.html
+++ b/blog-archive.html
@@ -18,7 +18,7 @@
 				<a class="nav-link w-nav-link" href="index.html">Home</a>
 				<a class="nav-link w-nav-link" href="the-couple.html">The couple</a>
 				<a class="nav-link w-nav-link" href="gallery.html">Gallery</a>
-				<a class="nav-link w-nav-link" href="blog.html">Blog</a>
+				<a class="nav-link w-nav-link" href="blog.html">Scribble</a>
 				<a class="nav-link w-nav-link" href="schedule.html">Schedule</a>
 			</nav>
 			<div class="menu-button w-nav-button">
