--- a/schedule.html
+++ b/schedule.html
@@ -16,7 +16,7 @@
 			<nav class="nav-menu w-nav-menu" role="navigation">
 				<a class="nav-link w-nav-link" href="index.html">The Couple</a>
 				<a class="nav-link w-nav-link" href="gallery.html">Gallery</a>
-				<a class="nav-link w-nav-link" href="blog.html">Blog</a>
+				<a class="nav-link w-nav-link" href="blog.html">Scribble</a>
 				<a class="nav-link w-nav-link" href="schedule.html">Schedule</a>
 			</nav>
 			<div class="menu-button w-nav-button">
