all the single fixes

--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-wf-domain="template-marriage.webflow.io" data-wf-page="57886d4fe745128157efed71" data-wf-site="575d00af09a5a7a9116bacfa">
+<html>
 <head>
 	<title>Scribble</title>
 	<meta content="width=device-width, initial-scale=1" name="viewport">
@@ -35,16 +35,23 @@
 							<div class="blog-post-item w-dyn-item">
 								<a class="blog-post-image-link-block first fullwidth w-inline-block" href="blog/journey.html" style="background-image: url('images/DSC6022.jpg');">
 									<div class="blog-posts first-blog-post-overlay">
-										<div class="blog-date first">June 12, 2016</div>
 										<div class="first-blog-post-title full">
-											Our Journey
+											Lights, Camera & Action!
 										</div>
+										<div class="blog-date first">October & December, 2018</div>
+
 									</div>
 								</a>
 								<div class="blog-summary-content-wrapper">
 									<div class="summary-block">
 										<div class="summary-gradient">
 										</div>
+
+										<p class="blog-summary-paragraph">We went around Kolkata, the city we both belong to, were born and brought up and shot some photos of ourselves.
+
+										The good part about that we could connect to the people in the good old city, and tried to make our marriage memorable in a cliched way.
+						
+										Most of the shots were taken in College Street, the 200 years old Street which houses Hindu and Hare Schools, Presidency College (now university) and of course, a hoard load of books, both old and new, the smell and feel of which we love very much.</p>
 										<p class="blog-summary-paragraph">Vestibulum ut placerat nisl. Cras sed purus tellus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Duis posuere nisi sit amet neque finibus vestibulum. Vivamus at leo ut turpis posuere molestie. Nullam at turpis nec metus pharetra bibendum. Vivamus id urna et leo blandit consequat. </p>
 									</div>
 									<a href="blog/journey.html">Continue Reading</a>
@@ -52,12 +59,12 @@
 							</div>
 						</div>
 					</div>
-					<div class="tint white-content-block-content-wrapper" data-ix="hero-fade-in-2">
+					<!--div class="tint white-content-block-content-wrapper" data-ix="hero-fade-in-2">
 						<h2 class="read-more white-block-title">Want to read more?</h2>
 						<a class="archive-button button w-button" href="blog-archive.html">
 							Visit&nbsp;Blog Archive
 						</a>
-					</div>
+					</div-->
 				</div>
 			</div>
 		</div>
