--- a/gallery.html
+++ b/gallery.html
@@ -54,7 +54,7 @@
   
   <img data-src="https://lh3.googleusercontent.com/Tlbxnh4cmiAZ0S7_5lY_UbjJ1Gu06d56zZULsT5rFEB5OFmcO2Ua01aDIPdcXyZPNamwCsnf4bzcDT_v3p4usLF_g1bUicVenvjnRwaIkXIgR40bJP1N_atAQVTM7-j7mVFbNrR-zcE=w1920-h1080" src="" alt="" />
 </div>
-			<div class="gallery-list-wrapper w-dyn-list">
+			<!--div class="gallery-list-wrapper w-dyn-list">
 				<div class="gallery-list w-clearfix w-dyn-items w-row">
 					<div class="gallery-item w-col w-col-6 w-dyn-item">
 						<a class="gallery-link-block large w-inline-block" data-ix="open-lightbox" href="gallery.html#" style="background-image: url('https://lh3.googleusercontent.com/TkyKIaIbeeaNSevCI25F0i44jGzHIwFo9rvgauA8XHLizOp9W2OoFshQD2r8IfYLFHP61m65xgjDgsucQHjRuOwFtKLJ9QSnk0X3IN0NzM-lPKfBo7dq4Qypv1CWJMcYcf-HVdHoVIw=w1920-h1080');">
@@ -196,7 +196,7 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</div-->
 			<!--div class="gallery-list-wrapper w-dyn-list">
 				<div class="gallery-list w-clearfix w-dyn-items w-row">
 					<div class="gallery-item w-col w-col-6 w-dyn-item">
