--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-wf-domain="template-marriage.webflow.io" data-wf-page="57886d4fe745128157efed71" data-wf-site="575d00af09a5a7a9116bacfa">
+<html>
 <head>
 	<title>The Marriage</title>
 	<link href="main.css" rel="stylesheet" type="text/css">
@@ -56,7 +56,7 @@
 							</div>
 							<h3 class="couple-title">Arindam</h3>
 							<h3 class="couple-title subtitle">Pal</h3>
-							<p class="couple-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet.</p>
+							<p class="couple-paragraph">Enthusiastic about pretty much anything from Alohomora to Elephanta. Yet another computer guy you’ll call to get your software (I do hardware also, for some extra bucks) fixed. Proud Bengali, loves his language and culture very much, and also a movie-buff.</p>
 						</div>
 					</div>
 				</div>
