--- a/schedule.html
+++ b/schedule.html
@@ -38,12 +38,13 @@
 							<div class="schedule-item w-dyn-item" style="background-image: url('images/DSC_0339.jpg');">
 								<div class="schedule-overlay-block">
 									<div class="schedule-overlay white-content-block-content-wrapper"><h2 class="schedule-title">Bibaho</h2>
-										<div class="schedule-info-title">4 P.M.</div>
+										<div class="schedule-info-title">7:30 P.M.</div>
+										<div class="schedule-info-title">21st February 2019</div>
 										<div class="schedule-info-title">BK Park, BK Block, Sector II</div>
 										<div class="schedule-info-title">Salt Lake City, Kolkata</div>
 										<a class="location-view-link" target="_blank" href="https://goo.gl/maps/PN5iznrKoFJ2">View Location on Google</a>
 										<br/>
-										<a class="apple-view-link" target="_blank" href="https://pass.is/oBB14g">Add to Apple Wallet</a>
+										<a class="apple-view-link" target="_blank" href="https://pass.is/v3FY4q">Add to Apple Wallet</a>
 										<div class="schedule-button-wrapper">
 											<a class="button schedule-more-info w-button" href="schedule/bibaho.html">More info</a>
 										</div>
@@ -54,12 +55,14 @@
 								<div class="schedule-overlay-block">
 									<div class="schedule-overlay white-content-block-content-wrapper">
 										<h2 class="schedule-title">Boubhaat</h2>
-										<div class="schedule-info-title">7 P.M.</div>
+										<div class="schedule-info-title">7:30 P.M.</div>
+										<div class="schedule-info-title">23rd February 2019</div>
+
 										<div class="schedule-info-title">Fair Land Marriage Hall, Manoshipara, Bediapara</div>
 										<div class="schedule-info-title">North Dumdum, Kolkata</div>
 										<a class="location-view-link" target="_blank" href="https://goo.gl/maps/tuwSdsGc3yL2">View Location on Google</a>
 										<br/>
-										<a class="apple-view-link" target="_blank" href="https://pass.is/oBB14g">Add to Apple Wallet</a>
+										<a class="apple-view-link" target="_blank" href="https://pass.is/v3FY4q">Add to Apple Wallet</a>
 										<div class="schedule-button-wrapper">
 											<a class="button schedule-more-info w-button" href="schedule/boubhaat.html">More info</a>
 										</div>
