--- a/schedule/bibaho.html
+++ b/schedule/bibaho.html
@@ -34,9 +34,8 @@
 				<div class="blog-post-image-block" style="background-image: url('images/DSC_0339.jpg');">
 					<div class="blog-post-header white-content-block-content-wrapper">
 						<h2 class="blog-post-title">Bibaho</h2>
-						<div class="schedule-info-title">
-							4 P.M.
-						</div>
+						<div class="schedule-info-title">7:30 P.M.</div>
+						<div class="schedule-info-title">21st February 2019</div>
 						<div class="schedule-info-title">
 							BK Park, BK Block, Sector II
 						</div>
@@ -47,7 +46,7 @@
 							View Location on Google
 						</a>
 						<br/>
-						<a class="apple-view-link" target="_blank" href="https://pass.is/oBB14g">Add to Apple Wallet</a>
+						<a class="apple-view-link" target="_blank" href="https://pass.is/v3FY4q">Add to Apple Wallet</a>
 					</div>
 				</div>
 				<div class="align-left white-content-block-content-wrapper">
