--- a/schedule/boubhaat.html
+++ b/schedule/boubhaat.html
@@ -35,9 +35,8 @@
 				<div class="blog-post-image-block" style="background-image: url('../images/DSC_0339.jpg');">
 					<div class="blog-post-header white-content-block-content-wrapper">
 						<h2 class="blog-post-title">Boubhaat</h2>
-						<div class="schedule-info-title">
-							7 P.M.
-						</div>
+						<div class="schedule-info-title">7:30 P.M.</div>
+						<div class="schedule-info-title" style="font-size: 16px;">23rd February 2019</div>
 						<div class="schedule-info-title">
 							Fair Land Marriage Hall, Manoshipara, Bediapara
 						</div>
@@ -47,7 +46,7 @@
 						<a class="location-view-link" target="_blank" href="https://goo.gl/maps/tuwSdsGc3yL2">View Location on Google
 						</a>
 						<br/>
-						<a class="apple-view-link" target="_blank" href="https://pass.is/oBB14g">Add to Apple Wallet</a>
+						<a class="apple-view-link" target="_blank" href="https://pass.is/v3FY4q">Add to Apple Wallet</a>
 					</div>
 				</div>
 				<div class="align-left white-content-block-content-wrapper">
