--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 							</div>
 							<h3 class="couple-title">Poulami</h3>
 							<h3 class="couple-title subtitle">Pal</h3>
-							<p class="couple-paragraph">Consectetur adipiscing elit. Vestibulum semper, dui a consectetur vestibulum, nisl ante accumsan felis, ac cursus est orci eget purus. Fusce fermentum lorem nec erat ultrices, in maximus metus cursus. Sed vitae ex eleifend, aliquam diam at, tristique turpis. Praesent libero risus.
+							<p class="couple-paragraph">Poulami does not care about all the stuff Arindam does because she loves sleeping. She can sleep any time of the day, any place in the world, without virtually any introduction. Loves to eat because how else Arindam will get rid of all the junk he cooks ?
 							</p>
 						</div>
 					</div>
